--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "lib": ["DOM", "ES2021"],
-    "types": ["vite/client", "jest"],
+   // "types": ["vite/client", "jest"],
     "jsx": "preserve",
     "allowJs": false,
     "strict": true,
